tests/ui/consts/promoted-const-drop.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted-const-drop.rs:12:26
   |
LL |     let _: &'static A = &A();
   |            ----------    ^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL |     let _: &'static [A] = &[C];
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted-const-drop.rs:13:28
   |
LL |     let _: &'static [A] = &[C];
   |            ------------    ^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0716`.
